correct for prod Add image locally Add rgpd export module Correct docker compose
